# AI-Driven-Development-30-Day-Challenge-

./: README.md  app.py  gemini.md  pyproject.toml  tools.py
.gemini/: settings.json
Task-4/chatbot/: .env  gemini.md
🧠 AIDD 30-Day Challenge/Task-1/: assisgnemnt-1.md  assisgnment-1.md
🧠 AIDD 30-Day Challenge/Task-2/: assisgnment-2.md
🧠 AIDD 30-Day Challenge/Task-3/: assisgnment-3.md
🧠 AIDD 30-Day Challenge/Task-4/chatbot/: README.md  agent.py  pyproject.toml
🧠 AIDD 30-Day Challenge/Task-6/: README.md
🧠 AIDD 30-Day Challenge/Task-6/.gemini/: .env  settings.json
🧠 AIDD 30-Day Challenge/Task-7/: README.md
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/: README.md
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/.specify/memory/: constitution.md
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/calculator/: app.py  calculator.py
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/history/prompts/constitution/: 0001-update-simple-calculator-constitution.constitution.prompt.md
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/history/prompts/simple-calculator/: 0002-create-simple-calculator-specification.spec.prompt.md  0003-create-simple-calculator-implementation-plan.plan.prompt.md  0004-generate-simple-calculator-tasks.tasks.prompt.md  (+1 more)
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/specs/1-simple-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/tests/integration/: test_app.py
🧠 AIDD 30-Day Challenge/Task-8/simple-calculator/tests/unit/: test_calculator.py
(+1 files in other folders)
