[project]
name = "task-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents",
    "chainlit",
    "openai",
    "python-dotenv",
]

[tool.setuptools]
py-modules = ["agent", "app", "main", "tools"]

[tool.uv.workspace]
members = [
    "Task-4/chatbot",
]
